# grendel

./: .gitattributes  .gitignore  PROGRESS.md  README.md  ROADMAP.md  SETUP.md  pyproject.toml
.claude/: settings.json
.claude/agents/: plan-reviewer.md  reviewer.md  tester.md
.claude/scripts/: gate.sh
.github/workflows/: feed-refresh.yml  release.yml
demo/: README.md  gauntlet.tape  grendel.tape
docs/: architecture.excalidraw  authoring-packs.md  user-story.html
examples/: gauntlet.example.yaml  grendel.example.yaml
examples/langgraph-agent/: README.md  agent.py  requirements.txt
feeds/: manifest.json
phases/phase-01/: plan.md  review.md  spec.md  test-report.md
phases/phase-02/: plan.md  review.md  spec.md
phases/phase-03/: plan.md  spec.md
phases/phase-04/: plan.md  review.md  spec.md  test-report.md
phases/phase-05/: plan.md  review.md  spec.md  test-report.md
phases/phase-06/: plan.md  review.md  spec.md  test-report.md
phases/phase-07/: plan.md  spec.md
phases/phase-08/: plan.md  review.md  spec.md
phases/phase-09/: plan.md  review.md  spec.md  test-report.md
phases/phase-10/: plan.md  review.md  spec.md  test-report.md
phases/phase-11/: plan.md  review.md  spec.md  test-report.md
phases/phase-12/: plan.md  review.md  spec.md  test-report.md
phases/phase-13/: plan.md  review.md  spec.md  test-report.md
phases/phase-14/: plan.md  review.md  spec.md  test-report.md
phases/phase-15/: plan.md  review.md  spec.md  test-report.md
phases/phase-16/: plan.md  review.md  spec.md  test-report.md
phases/phase-17/: plan.md  review.md  spec.md  test-report.md
phases/phase-18/: plan.md  review.md  spec.md  test-report.md
phases/phase-19/: plan.md  review.md  spec.md  test-report.md
phases/phase-20/: plan.md  review.md  spec.md  test-report.md
phases/phase-21/: plan.md  review.md  spec.md  test-report.md
phases/phase-22/: plan.md  review.md  spec.md  test-report.md
phases/phase-23/: plan.md  review.md  spec.md
phases/phase-24/: plan.md  review-post24-report-card.md  review.md  spec.md  test-report.md
phases/phase-25/: plan.md  review.md  spec.md  test-report.md
phases/phase-26/: plan.md  review.md  spec.md  test-report.md
scripts/: build_feed.py  refresh_feed.py
src/gauntlet/: __init__.py  attacks.py  cli.py  config.py  errors.py  feed.py  (+11 more)
tests/: conftest.py  fakes.py  test_adapter_judge.py  test_attacks.py  test_banner.py  test_bundled_packs.py  test_catalog_loader.py  test_cli.py  test_cli_autoconfig.py  test_cli_catalog.py  test_cli_config.py  test_cli_diff.py  test_cli_doctor.py  test_cli_encoding.py  test_cli_flag_target.py  test_cli_home.py  test_cli_import.py  test_cli_packs.py  test_cli_proxy.py  test_cli_report.py  test_cli_run.py  test_cli_run_flow.py  test_cli_secrets.py  test_cli_target_config.py  test_cli_tui.py  test_cli_walkthrough.py  test_config.py  test_config_driven_scoring.py  test_controls.py  test_corpus_import.py  test_custom_adapter.py  test_diff.py  test_docs_authoring.py  test_docs_readme.py  test_example_agent.py  test_feed_default.py  test_feed_update.py  test_http_adapter.py  test_integration.py  test_judge_vote.py  (+39 more)
(+109 files in other folders)
