[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gauntlet"
version = "0.1.0"
description = "Red-team your AI agents: a CLI that fires authorized attacks at LLM and agent targets."
readme = "PROGRESS.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "typer>=0.16",
    "pydantic>=2",
    "httpx>=0.27",
    "pyyaml>=6",
    "textual>=0.80",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
dev = [
    "ruff>=0.9",
    "pytest>=8",
    "pytest-asyncio>=0.21,<1",
]

[project.scripts]
gauntlet = "gauntlet.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gauntlet"]
artifacts = ["src/gauntlet/packs/**/*.yaml"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
